src/test/ui/async-await/feature-gate-async_fn_in_trait.stderr
error[E0706]: functions in traits cannot be declared `async`
  --> $DIR/feature-gate-async_fn_in_trait.rs:4:5
   |
LL |     async fn foo();
   |     -----^^^^^^^^^^
   |     |
   |     `async` because of this
   |
   = note: `async` trait functions are not currently supported
   = note: consider using the `async-trait` crate: https://crates.io/crates/async-trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0706`.
