src/test/ui/async-await/feature-gate-async_fn_in_trait.rs
// edition:2021

trait T {
    async fn foo(); //~ ERROR functions in traits cannot be declared `async`
}

fn main() {}
